--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,12 +1,8 @@
 {
-  "country": "US",
-  "edition": "Developer",
+  "edition": "Enterprise",
+  "features": "API",
   "orgPreferences": {
-    "enabled": [
-      "S1DesktopEnabled"
-    ],
+    "enabled": [],
     "disabled": []
-  },
-  "orgName": "Your Company",
-  "adminEmail": "yourname@example.com"
+  }
 }
